include/chemharp.h

    typedef harp::Frame CHRP_FRAME;
    typedef harp::Atom CHRP_ATOM;
    typedef harp::UnitCell CHRP_CELL;
    typedef harp::Topology CHRP_TOPOLOGY;
    //! Opaque type handling frames, *i.e* data from a step
    typedef struct CHRP_FRAME CHRP_FRAME;
    //! Opaque type handling an atom
    typedef struct CHRP_ATOM CHRP_ATOM;
    //! Opaque type handling an unit cell
    typedef struct CHRP_CELL CHRP_CELL;
    //! Opaque type handling a topology
    typedef struct CHRP_TOPOLOGY CHRP_TOPOLOGY;
/*!
* @brief Get the error message corresponding to an error code.
* @param status The error code
* @return A null-terminated string encoding the textual representation of the status.
*/
CHRP_EXPORT const char* chrp_strerror(int status);
/*!
* @brief Get the last error message.
* @return A null-terminated string encoding the textual representation of the last error.
*/
CHRP_EXPORT const char* chrp_last_error();
//! Available logging level
typedef enum CHRP_LOG_LEVEL {
    //! Do not log anything
    CHRP_LOG_NONE = 0,
    //! Only log on errors
    CHRP_LOG_ERROR = 1,
    //! Log warnings and erors
    CHRP_LOG_WARNING = 2,
    //! Log infos, warnings and errors
    CHRP_LOG_INFO = 3,
    //! Log everything
    CHRP_LOG_DEBUG = 4
} chrp_log_level_t ;
/*!
* @brief Get the current logging level
* @param level The logging level
* @return The status code
*/
CHRP_EXPORT int chrp_loglevel(chrp_log_level_t* level);
/*!
* @brief Redirect the logs to \c file, overwriting the file if it exists
* @param file The filename for the new log file.
* @return The status code
*/
CHRP_EXPORT int chrp_logfile(const char* file);
/*!
* @brief Redirect the logs to the standard error output. This is enabled by default.
* @return The status code
*/
CHRP_EXPORT int chrp_log_stderr();
/******************************************************************************/
/*!
* @brief Create an empty frame with initial capacity of \c natoms. It will be
*        resized by the library as needed.
* @param natoms the size of the wanted frame
* @return A pointer to the frame
*/
CHRP_EXPORT CHRP_FRAME* chrp_frame(size_t natoms);
/*!
* @brief Get the positions from a frame
* @param frame The frame
* @param data A Nx3 float array to be filled with the data
* @param size The array size (N).
* @return The status code
*/
CHRP_EXPORT int chrp_frame_positions(const CHRP_FRAME* frame, float (*data)[3], size_t size);
/*!
* @brief Get the velocities from a frame, if they exists
* @param frame The frame
* @param data A Nx3 float array to be filled with the data
* @param size The array size (N).
* @return The status code
*/
CHRP_EXPORT int chrp_frame_velocities(const CHRP_FRAME* frame, float (*data)[3], size_t size);
/*!
* @brief Destroy a frame, and free the associated memory
* @param frame The frame to destroy
* @return The status code
*/
CHRP_EXPORT int chrp_frame_free(CHRP_FRAME* frame);
/******************************************************************************/
/*!
* @brief Create an ORTHOROMBIC UnitCell from the three lenghts
* @param a,b,c the three lenghts of the cell
* @return A pointer to the UnitCell
*/
CHRP_EXPORT CHRP_CELL* chrp_cell(double a, double b, double c);
/*!
* @brief Get the cell lenghts.
* @param cell the unit cell to read
* @param a,b,c the three cell lenghts
* @return The status code
*/
CHRP_EXPORT int chrp_cell_lengths(const CHRP_CELL* cell, double* a, double* b, double* c);
/*!
* @brief Get the cell angles, in degrees.
* @param cell the cell to read
* @param alpha,beta,gamma the three cell angles
* @return The status code
*/
CHRP_EXPORT int chrp_cell_angles(const CHRP_CELL* cell, double* alpha, double* beta, double* gamma);
/*!
* @brief Get the unit cell matricial representation.
* @param cell the unit cell to use
* @param mat the matrix to fill. It should be a 3x3 matrix.
* @return The status code
*/
CHRP_EXPORT int chrp_cell_matrix(const CHRP_CELL* cell, double mat[3][3]);
//! Available cell types in Chemharp
typedef enum CHRP_CELL_TYPES {
    //! The three angles are 90°
    CHRP_CELL_ORTHOROMBIC = 0,
    //! The three angles may not be 90°
    CHRP_CELL_TRICLINIC = 1,
    //! Cell type when there is no periodic boundary conditions
    CHRP_CELL_INFINITE = 2,
} chrp_cell_type_t ;
/*!
* @brief Get the cell type
* @param cell the unit cell to read
* @param type the type of the cell
* @return The status code
*/
CHRP_EXPORT int chrp_cell_type(const CHRP_CELL* cell, chrp_cell_type_t* type);
/*!
* @brief Get the cell periodic boundary conditions along the three axis
* @param cell the cell to read
* @param x,y,z the periodicity of the cell along the three axis.
* @return The status code
*/
CHRP_EXPORT int chrp_cell_periodicity(const CHRP_CELL* cell, bool* x, bool* y, bool* z);
/*!
* @brief Destroy an unit cell, and free the associated memory
* @param cell The cell to destroy
* @return The status code
*/
CHRP_EXPORT int chrp_cell_free(CHRP_CELL* cell);
/******************************************************************************/

/*!
* @brief Create a new empty topology
* @return A pointer to the new Topology
*/
CHRP_EXPORT CHRP_TOPOLOGY* chrp_topology();
/*!
* @brief Add an atom at the end of a topology
* @param topology The topology
* @param atom The atom to be added
* @return The status code
*/
CHRP_EXPORT int chrp_topology_append(CHRP_TOPOLOGY* topology, const CHRP_ATOM* atom);
/*!
* @brief Remove an atom from a topology by index. This modify all the other atoms indexes.
* @param topology The topology
* @param i The atomic index
* @return The status code
*/
CHRP_EXPORT int chrp_topology_remove(CHRP_TOPOLOGY* topology, size_t i);
/*!
* @brief Tell if the atoms \c i and \c j are bonded together
* @param topology The topology
* @param i,j The atomic indexes
* @param result true if the atoms are bonded, false otherwise
* @return The status code
*/
CHRP_EXPORT int chrp_topology_isbond(const CHRP_TOPOLOGY* topology, size_t i, size_t j, bool* result);
/*!
* @brief Tell if the atoms \c i, \c j and \c k constitues an angle
* @param topology The topology
* @param i,j,k The atomic indexes
* @param result true if the atoms constitues an angle, false otherwise
* @return The status code
*/
CHRP_EXPORT int chrp_topology_isangle(const CHRP_TOPOLOGY* topology, size_t i, size_t j, size_t k, bool* result);
/*!
* @brief Tell if the atoms \c i, \c j, \c k and \c m constitues a dihedral angle
* @param topology The topology
* @param i,j,k,m The atomic indexes
* @param result true if the atoms constitues a dihedral angle, false otherwise
* @return The status code
*/
CHRP_EXPORT int chrp_topology_isdihedral(const CHRP_TOPOLOGY* topology, size_t i, size_t j, size_t k, size_t m, bool* result);
/*!
* @brief Get the number of bonds in the system
* @param topology The topology
* @param nbonds After the call, contains the number of bond
* @return The status code
*/
CHRP_EXPORT int chrp_topology_bonds_count(const CHRP_TOPOLOGY* topology, size_t* nbonds);